--- a/index.html
+++ b/index.html
@@ -186,8 +186,7 @@
 </head>
 <body>
   <header>
-    <h1>Busca por Matrícula</h1>
-    <p>Digite o número da matrícula</p>
+    <h1>Banco de Horas</h1>
   </header>
   
   <div class="container">
@@ -281,7 +280,6 @@
 
       if (encontrado) {
         resultadoDiv.innerHTML = `
-          <h2>Resultado:</h2>
           <ul>
             <li><strong>Colaborador:</strong> ${encontrado.nome}</li>
             <li><strong>Matrícula:</strong> ${encontrado.matricula}</li>
